--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,4 +25,29 @@ header {
     justify-content: space-between;
     margin: 0% 2% ;
   }
-  
+
+  .navbar #ExLinks {
+    display: flex;
+    margin: 40px 20px;
+  }
+  .navbar #ExLinks a:hover  { 
+    color: #FE9C00;
+
+  }
+  .sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    background-color: #191b1a;
+    padding-top: 20px;
+  }
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: whitesmoke;
+    display: block;
+  }
+  .sidenav a:hover {
+    color: #FE9C00;
+  }
